@@ -1,3 +1,11 @@
+Wed Mar  5 18:58:44 2003  David Helder  <dhelder@umich.edu>
+	
+	* BUGS,README: Updates
+
+Wed Mar  5 18:47:04 2003  David Helder  <dhelder@umich.edu>
+
+	* gnet.spec.in: Fixes from Jeff Boonggren (closes #107499)
+
 Tue Feb 25 15:19:17 2003  David Helder  <dhelder@umich.edu>
 
 	* src/makefile.mingw: Commited Martyn Russell's patch to use
